dodanie przypisów do zdjęć

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -151,3 +151,10 @@ Conway's new solitaire game "life"}},
   howpublished = "\newline \url{https://github.com/Darman1136/UE4Boids}",
   note = "\newline [Internet; Data wejścia: 12.08.2022]"
 }
+
+@misc{BeatSaberpicture,
+  author = {Beat Games},
+  title = {{Zdjęcie przykładowej gry na VR}},
+  howpublished = "\newline \url{https://store.steampowered.com/app/620980/Beat_Saber/}",
+  note = "\newline [Internet; Data wejścia: 05.11.2022]"
+}
