--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -157,7 +157,7 @@ W ciągu ostatnich 10 lat rynek gogli VR zaczął się budzić na nowo dzięki j
 	\end{subfigure}%
 	
 
-\caption{Gogle VR od Reality Labs.}
+\caption{Gogle VR od Reality Labs. \cite{ilosc_urzadzen}}
 \label{ref:ref}
 \end{figure}
 
@@ -167,8 +167,8 @@ W kolejnym roku, tj. 2020 wypuścili kolejne gogle, czyli Oculus Quest 2, który
 \begin{figure}[!ht]%
 \centering
 \includegraphics[width=0.8\columnwidth]{graphics/BeatSaber.jpg}
-\caption{Przykład gry stworzonej z myślą o VR: "Beat Saber" firmy Beat Games.
-\label{OpenBrush}}%
+\caption{Przykład gry stworzonej z myślą o VR: "Beat Saber" firmy Beat Games. \cite{BeatSaberpicture}
+\label{BeatSaber}}%
 %
 \qquad
 \end{figure}  
