Dodano streszczenie po Polsku

--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -121,8 +121,7 @@ Computer models gallery in Unreal Engine
 \end{flushleft}
 \vspace{1cm}
 
-
- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Celem pracy jest stworzenie programu do pokazania kilku wybranych przeze mnie modeli komputerowych. We wstępie została krótko opisana historia obecnego rynku VR oraz cel i zakres pracy. Kolejnym rozdziale zostało opisane jak wygląda program dla użytkownika końcowego oraz jak wygląda podstawowe poruszanie się po programie. W  następnym zostały krótko opisane silnik Unreal Engine 4, język C++ i gogle Oculus Quest, które zostały wykorzystane do pomocy w projekcie. Rozdział 4 skupia się na modelach wykorzystanych w projekcie, gdzie najpierw pokrótce jest opowiadana historia danego modelu, następnie jego kod i implementacja w projekcie. Pod koniec każdego podrozdziału kończy krótki opis wyglądu modelu w projekcie oraz link do filmu który pokazuje model w działaniu. Przedostatni rozdział skupia się na innych rzeczach które zostały stworzone do projektu. Pracę inżynierską kończy kilka wniosków które się nasunęły podczas prac nad projektem.
 
 \newpage
 \begin{flushleft}
