--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -424,6 +424,8 @@ W projekcie po najechaniu wskaźnikiem z kontrolera ruchowego na panel użytkown
 \label{Pendulum_in_project}
 \end{figure}
 
+W załączonym filmie można zobaczyć jak model wygląda w trakcie działania \url{https://youtu.be/9zGF36VOaLI}
+
 \newpage
 \subsection{Gra w życie}
 
@@ -531,23 +533,14 @@ Klasa WBP\_GameOfLifeControll jest odpowiedzialna kontakt między użytkownikiem
 \subsubsection{Gra w życie - Wygląd symulacji w projekcie}
 W programie za pomocą kontrolerów możemy ustawić stan początkowy każdej komórki w poprzez najechanie na nią wskaźnikiem wystającym z kontrolerów.
 
-\begin{figure}[!ht]%
-	\centering
-	\begin{subfigure}{.5\textwidth}
-		\centering
-		\includegraphics[width=0.9\linewidth]{graphics/gameoflife/GOLInUE_1.png}
-		\caption{Ożywianie komórek z pomocą kontrolera}	
-		\label{ref:subref_a}
-	\end{subfigure}%
-	\begin{subfigure}{.5\textwidth}
-		\centering
-		\includegraphics[width=0.9\linewidth]{graphics/gameoflife/GOLInUE_2.png}
-		\caption{Uśmiercanie komórek z pomocą kontrolera}
-		\label{ref:subref_b}
-	\end{subfigure}%
-\label{ref:ref}
-\end{figure}
-
+\begin{figure}[H]%
+\centering
+\includegraphics[width=0.5\columnwidth]{graphics/gameoflife/GOLInUE_3.png}
+\caption{Ożywianie i uśmiercanie komórek z pomocą kontrolera
+\label{BPExample}}%
+%
+\qquad
+\end{figure}  
 
 Po lewej stronie od tablicy z komórkami znajduje się widżet, za pomocą którego możemy włączyć grę, przyśpieszyć jej działanie lub spowolnić, albo zresetować komórki do stanu początkowego. 
 
@@ -568,7 +561,9 @@ Po lewej stronie od tablicy z komórkami znajduje się widżet, za pomocą któr
 \label{ref:ref}
 \end{figure}
 
-\newpage
+W załączonym filmie można zobaczyć jak model wygląda w trakcie działania \url{https://youtu.be/OiSlqG-6q6M}
+
+
 \subsection{Efekt Motyla}
 
 "Czy trzepot skrzydeł motyla w Brazylii może wywołać tornado w Teksasie?" Jest to pytanie Edwarda Lorenza, meteorologa, który zadał je na 139 spotkaniu American Association for the Advancement of Science w stolicy USA w 1972 roku \cite{lorenz_praca}.
@@ -656,6 +651,8 @@ W programie użytkownik może obserwować układ Lorenza z wybranymi parametrami
 %
 \qquad
 \end{figure}  
+
+W załączonym filmie można zobaczyć jak model wygląda w trakcie działania \url{https://youtu.be/jLCHp4Ga7aU}
 
 \newpage
 \subsection{Modele Agentowe}
@@ -783,6 +780,8 @@ Każdego agenta z SpawnBoxu możemy położyć w dowolnym miejscu na planszy. Ki
 \end{figure}
 
 Symulację uruchamiamy poprzez najechanie kontrolerem na przycisk start, który znajduje się na widgecie przed planszą. Symulacja będzie trwać, dopóki nie wyłączymy jej drugim przyciskiem. Podczas symulacji agenci będą się poruszać zgodnie z zachowaniami, jakie zostały stworzone w kodzie.
+
+W załączonym filmie można zobaczyć jak model wygląda w trakcie działania \url{https://youtu.be/2fvBIVX4U5c}
 
 \newpage
 \subsection{Ptaki (Boids)}
@@ -938,6 +937,7 @@ Po kliknięciu na prawym kontrolerze spustu możemy zmienić położenie celu do
 \label{ref:ref}
 \end{figure}
 
+W załączonym filmie można zobaczyć jak model wygląda w trakcie działania \url{https://youtu.be/uj8UxW5x9GQ}
 
 \newpage
 \section{Inne rzeczy tworzone do projektu}
