--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -121,7 +121,7 @@ Computer models gallery in Unreal Engine
 \end{flushleft}
 \vspace{1cm}
 
-Celem pracy jest stworzenie programu do pokazania kilku wybranych przeze mnie modeli komputerowych. We wstępie została krótko opisana historia obecnego rynku VR oraz cel i zakres pracy. Kolejnym rozdziale zostało opisane jak wygląda program dla użytkownika końcowego oraz jak wygląda podstawowe poruszanie się po programie. W  następnym zostały krótko opisane silnik Unreal Engine 4, język C++ i gogle Oculus Quest, które zostały wykorzystane do pomocy w projekcie. Rozdział 4 skupia się na modelach wykorzystanych w projekcie, gdzie najpierw pokrótce jest opowiadana historia danego modelu, następnie jego kod i implementacja w projekcie. Pod koniec każdego podrozdziału kończy krótki opis wyglądu modelu w projekcie oraz link do filmu który pokazuje model w działaniu. Przedostatni rozdział skupia się na innych rzeczach które zostały stworzone do projektu. Pracę inżynierską kończy kilka wniosków które się nasunęły podczas prac nad projektem.
+Celem pracy jest stworzenie programu do pokazania kilku wybranych modeli komputerowych. We wstępie została krótko opisana historia obecnego rynku VR, a także cel i zakres pracy. W kolejnym rozdziale zostało opisane, jak wygląda program dla użytkownika końcowego, jak wygląda podstawowe poruszanie się po programie oraz jak wygląda poziom (pokój galerii). W następnym został krótko opisane silnik Unreal Engine 4, język C++ i gogle Oculus Quest, które pozwoliły na realizację projektu. Rozdział 4 skupia się na modelach komputerowych. Zaczynając od przedstawienia historii, która stoi za danym modelem, kolejno jest opis klas C++, które tworzą dany model oraz jak wygląda implementacja klas w projekcie przy użyciu BluePrintów. Każdy podrozdział dotyczący modeli kończy krótki opis wyglądu danego modelu w projekcie oraz link do filmu który pokazuje model w działaniu. Przedostatni rozdział skupia się na pozostałych aspektach projektu. Pracę inżynierską kończy zbiór wniosków.
 
 \newpage
 \begin{flushleft}
