Dodano streszczenie po ang

--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -130,7 +130,7 @@ Celem pracy jest stworzenie programu do pokazania kilku wybranych modeli kompute
 \vspace{1cm}
 
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+The aim of the thesis is to create a program showcasing several selected computer models. The introduction briefly describes the history of the current VR market, as well as the purpose and scope of the work. The next chapter describes what the program looks like for the end-user, how basic navigation in the program works, and what the level (gallery room) looks like. The following chapter briefly describes the Unreal Engine 4, the C++ language, and the Oculus Quest goggles that enabled the project's realization. Chapter 4 focuses on computer models. Starting with the presentation of the history behind each model, the C++ classes that create each model are described, as well as how the classes are implemented in the project using Blueprints. Each subchapter about the models ends with a brief description of the model's appearance in the project and a link to a video showing the model in action. The penultimate chapter focuses on the remaining aspects of the project. The engineering thesis concludes with a collection of conclusions.
 
 \newpage
 
