--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -1013,8 +1013,21 @@ Stworzenie projektu programu w VR skłania do kilku wniosków:
 \bibliographystyle{unsrt}
 \bibliography{bibliografia}
 
+\newpage
+OŚWIADCZENIE O PRAWACH AUTORSKICH
 
-
+Oświadczam, że załączona przeze mnie wersja elektroniczna pracy dyplomowej w systemie
+Archiwum Prac Dyplomowych:
+\begin{enumerate}
+ \item jest wersją ostateczną złożoną w celu przystąpienia do egzaminu dyplomowego w
+Uniwersytecie Wrocławskim;
+ \item jest mojego autorstwa i nie narusza autorskich praw w rozumieniu ustawy z dnia 4
+lutego 1994 r. o prawie autorskim i prawach pokrewnych (tekst jednolity: Dz. U.
+z 2021 r., poz.1062);
+ \item nie zawiera danych i informacji uzyskanych w sposób niedozwolony;
+ \item nie była wcześniej przedmiotem innej urzędowej procedury związanej z nadaniem
+dyplomu uczelni wyższej lub tytułu zawodowego.
+\end{enumerate}
 \end{document}
 
 
